# griip-debug-assessment

./: README.md  pyproject.toml
src/griip_debug_assessment/: __init__.py  __main__.py  grasp_generation_service.py  mocks.py  models.py  pick_queue.py  picking_manager.py  simulation.py
