[project]
name = "griip-debug-assessment"
version = "0.1.0"
description = "Sandboxed threaded GRIIP picking debug assessment"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
